@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2008 Sun Microsystems, Inc.
  * Portions Copyright 2014-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.core;
 import java.util.List;
@@ -180,13 +181,13 @@ public class LogRotationPolicyConfigManager implements
       Class<? extends RotationPolicy> theClass =
           pd.loadClass(className, RotationPolicy.class);
       // Explicitly cast to check that implementation implements the correct interface.
-      RotationPolicy<?> retentionPolicy = theClass.newInstance();
+      RotationPolicy<?> retentionPolicy = theClass.getDeclaredConstructor().newInstance();
       // next line is here to ensure that eclipse does not remove the cast in the line above
       retentionPolicy.hashCode();
       return true;
     } catch (Exception e) {
       unacceptableReasons.add(
-          ERR_CONFIG_ROTATION_POLICY_INVALID_CLASS.get(className, config.dn(), e));
+          ERR_CONFIG_ROTATION_POLICY_INVALID_CLASS.get(className, config.dn(), stackTraceToSingleLineString(e)));
       return false;
     }
   }
@@ -199,12 +200,12 @@ public class LogRotationPolicyConfigManager implements
     try {
       Class<? extends RotationPolicy> theClass =
           pd.loadClass(className, RotationPolicy.class);
-      RotationPolicy<LogRotationPolicyCfg> rotationPolicy = theClass.newInstance();
+      RotationPolicy<LogRotationPolicyCfg> rotationPolicy = theClass.getDeclaredConstructor().newInstance();
       rotationPolicy.initializeLogRotationPolicy(config);
       return rotationPolicy;
     } catch (Exception e) {
       LocalizableMessage message = ERR_CONFIG_ROTATION_POLICY_INVALID_CLASS.get(
-          className, config.dn(), e);
+          className, config.dn(), stackTraceToSingleLineString(e));
       throw new ConfigException(message, e);
     }
   }
